// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Add Todo Default Add Todo 1`] = `
<div
  className="add-todo"
>
  <div
    className="add-todo-icon"
  />
  <input
    className="add-todo-input"
    onKeyPress={[Function]}
    placeholder="Add a new todo..."
  />
</div>
`;

exports[`Storyshots App Default Layout 1`] = `
<div
  className="App"
>
  <div
    className="add-todo"
  >
    <div
      className="add-todo-icon"
    />
    <input
      className="add-todo-input"
      onKeyPress={[Function]}
      placeholder="Add a new todo..."
    />
  </div>
</div>
`;

exports[`Storyshots Todo Item Checked Todo 1`] = `
<div
  className="todo-item"
  onClick={[Function]}
>
  <div
    className="todo-checkbox"
  />
  <span
    className="todo-description"
  >
    Checked Todo
  </span>
</div>
`;

exports[`Storyshots Todo Item Default Todo 1`] = `
<div
  className="todo-item"
  onClick={[Function]}
>
  <div
    className="todo-checkbox"
  />
  <span
    className="todo-description"
  >
    Default Todo
  </span>
</div>
`;
